Fixed z-index on toggle menu panel

--- a/wc-bangkok-2018/sass/_navigation.scss
+++ b/wc-bangkok-2018/sass/_navigation.scss
@@ -124,6 +124,7 @@
 		position: fixed;
 		top: 0;
 		width: 100%;
+		z-index: 100;
 	}
 	.menu {
 		list-style-type: none;
